# AgentSH

./: .gitignore  ARCHITECTURE_ANALYSIS_COMPLETE.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  QUICK_START.txt  README.md  pyproject.toml
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.github/homebrew-tap/: update-formula.yml
.github/workflows/: ci.yml  lint.yml  release.yml  security.yml  test.yml
.hive-mind/: hive.db  hive.db-shm  hive.db-wal
.hive-mind/sessions/: hive-mind-prompt-swarm-1764786589326-otdflnmmx.txt  hive-mind-prompt-swarm-1764786649488-9fcqggcy8.txt  hive-mind-prompt-swarm-1764788136747-0kky2m5zc.txt  session-1764786649489-oi96qu1v3-auto-save-1764786679492.json  session-1764788136749-ehb7dy96i-auto-save-1764788166753.json
completions/: agentsh.bash  agentsh.fish  agentsh.zsh
docs/: ARCHITECTURE_SUMMARY.md  ArchitecturalSpecification.md  Design Spec.md  DesignSpec.md  DeveloperChecklist.md  IMPLEMENTATION_CHECKLIST.md  Implementation Checklist.md  Implementation Plan.md  ImplementationPlan.md  README.md  RELEASE_SETUP.md  SolutionDesign.md  api.md  architecture.md  configuration.md  development.md  security.md  user-guide.md
examples/: aishellrc  config.toml  config.yaml
packaging/: README.md
packaging/alpine/: APKBUILD
packaging/arch/: PKGBUILD  agentsh.install
packaging/debian/: changelog  control  copyright  postinst  postrm  rules
packaging/docker/: .dockerignore  Dockerfile  Dockerfile.alpine  Dockerfile.dev  docker-compose.yml  docker-entrypoint.sh
packaging/homebrew/: agentsh.rb
packaging/windows/: README.md  install.ps1
scripts/: install-login-shell.sh  install.sh
src/: ai_orchestrator.rs  cli.rs  config.rs  context.rs  error.rs  execution_engine.rs  input_router.rs  logging.rs  main.rs  pty.rs  safety.rs  shell.rs  spinner.rs
src/agentsh/: __init__.py  __main__.py
src/agentsh/agent/: __init__.py  agent_loop.py  cache.py  factory.py  http_client.py  llm_client.py  prompts.py  resilient.py
src/agentsh/agent/providers/: __init__.py  anthropic.py  litellm.py  ollama.py  openai.py  openrouter.py
src/agentsh/config/: __init__.py  defaults.py  loader.py  schemas.py
src/agentsh/memory/: __init__.py  manager.py  retrieval.py  schemas.py  session.py  store.py
src/agentsh/orchestrator/: __init__.py  coordinator.py  devices.py  mcp_server.py  ssh.py
src/agentsh/plugins/: __init__.py  base.py  lazy.py  loader.py
src/agentsh/plugins/builtin/: __init__.py  code.py  filesystem.py  process.py  remote.py  shell.py
src/agentsh/plugins/robotics/: __init__.py  robotics_toolset.py  ros_interface.py  safety.py
src/agentsh/security/: __init__.py  approval.py  audit.py  classifier.py  controller.py  policies.py  rbac.py
src/agentsh/shell/: __init__.py  completer.py  completion_modes.py  completion_scripts.py  help.py  history.py  input_classifier.py  login.py  memory.py  prompt.py  pty_manager.py  session.py  wrapper.py
src/agentsh/telemetry/: __init__.py  events.py  exporters.py  health.py  logger.py  metrics.py
src/agentsh/tools/: __init__.py  base.py  registry.py  runner.py
src/agentsh/utils/: __init__.py  async_utils.py  crypto.py  env.py  markdown.py  resource_manager.py  syntax.py  ux.py  validators.py
src/agentsh/workflows/: __init__.py  edges.py  executor.py  nodes.py  single_agent.py  states.py
src/agentsh/workflows/predefined/: __init__.py  backup.yaml  bootstrap.yaml  deploy.yaml  fleet_healthcheck.yaml  fleet_update.yaml  robot_adopt_hardware.yaml  robot_fleet_dock.yaml  robot_fleet_update.yaml
src/plugins/: builtin.rs  executor.rs  loader.rs  mod.rs  protocol.rs
tests/: __init__.py  conftest.py
tests/unit/: test_agent_loop.py  test_agent_prompts.py  test_approval.py  test_async_utils.py  test_completer.py  test_completion_modes.py  test_completion_scripts.py  test_config.py  test_crypto.py  test_defaults.py  test_device_inventory.py  test_env.py  test_executor.py  test_factory.py  test_filesystem_toolset.py  test_help.py  test_history.py  test_http_client.py  test_input_classifier.py  test_lazy_plugins.py  test_llm_cache.py  test_llm_client.py  test_loader.py  test_logger.py  test_login_shell.py  test_markdown.py  test_mcp_server.py  test_memory.py  test_memory_manager.py  test_memory_retrieval.py  test_memory_schemas.py  test_memory_session.py  test_memory_store.py  test_orchestrator_coordinator.py  test_plugins.py  test_predefined_workflows.py  test_process_toolset.py  test_prompt.py  test_provider_anthropic.py  test_provider_litellm.py  (+32 more)
