[package]
name = "agentsh"
version = "0.1.0"
edition = "2021"
authors = ["agentsh contributors"]
description = "An AI-powered login shell with intelligent operations agent"
license = "MIT"
repository = "https://github.com/yourusername/agentsh"
keywords = ["shell", "ai", "cli", "terminal", "devops"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
# Async runtime
tokio = { version = "1.34", features = ["full"] }

# PTY operations
portable-pty = "0.8"
nix = { version = "0.27", features = ["term", "signal", "process"] }

# Line editing
rustyline = { version = "13.0", features = ["derive"] }

# CLI argument parsing
clap = { version = "4.4", features = ["derive", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP client for LLM API
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Logging and diagnostics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
dirs = "5.0"
regex = "1.10"
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1.18"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }

# Terminal utilities
crossterm = "0.27"
unicode-width = "0.1"

[dev-dependencies]
tempfile = "3.8"
mockito = "1.2"
assert_cmd = "2.0"
predicates = "3.0"
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
# Faster builds for development
opt-level = 0
debug = true

[[bin]]
name = "agentsh"
path = "src/main.rs"
